feat: 2nd part of 5th task of 5th la10 homework

--- a/courses/la10/exercises/ex05.tex
+++ b/courses/la10/exercises/ex05.tex
@@ -352,5 +352,11 @@ Sei $D_6 \coloneqq \qty\big{\text{id}, r_1, r_2, r_3, s_1, s_2, s_3}$.
   $\Rightarrow$ für jedes Element $a \ne 0 \in K$ existiert ein multiplikatives
   Inverses. \\
   $\Rightarrow \qty\big(K, +, \circ)$ ist ein \textbf{Körper}.
+
+\item Was ist $i^2$?
+
+  \subparagraph{Lsg.} $i = \qty\big(0, 1)$.
+  Somit ist $i^2 = i \circ i =
+  \qty\big(1 \cdot 1 - 0 \cdot 0, 1 \cdot 0 + 0 \cdot 1) = \qty\big(1, 0)$.
 \end{enumerate}
 \end{document}
