--- a/courses/la10/homework/ha05.tex
+++ b/courses/la10/homework/ha05.tex
@@ -285,7 +285,7 @@ von $M$ nach $M$ und wird die \emph{symmetrische Gruppe} auf $M$ genannt.
 
   $\Rightarrow \phi$ ist \textbf{surjektiv}.
 
-  $\Rightarrow \phi$ ist \textbf{injektiv}.
+  $\Rightarrow \phi$ ist \textbf{bijektiv}.
 
 \item Lemma 1.11 der Vorlesung \label{lemma:1.11} lautet (\emph{``Sei
     $f \colon M \to N$ eine Abbildung, dann gilt
