feat: 3rd part of 1st task of 6th la10 homework

--- a/courses/la10/homework/ha06.tex
+++ b/courses/la10/homework/ha06.tex
@@ -122,6 +122,17 @@
     &= 291 \cdot  \colorbox{Apricot!50}{1026} - 283 \cdot \colorbox{PineGreen!30}{1055}
   \end{flalign*}
   $\Rightarrow \ggT\qty\big(1055, 1026) = s \cdot 1055 + t \cdot 1026$ mit
-  $s = -283$ und $t = 291$
+  $s = -283$ und $t = 291$.
+
+\item Folgern Sie aus (b), dass $\qty[1026]$ in $\mathbb{Z}_{/ 1055}$
+  invertierbar ist und bestimmen Sie das multiplikative Inverse von
+  $\qty[1026]$ in $\mathbb{Z}_{/ 1055}$.
+
+  \subparagraph{Lsg.} Nach Lemma 2.35 der Vorlesung (\emph{``Sei
+    $k \in \mathbb{Z}$. Dann ist $\qty[k] \in \mathbb{Z}_{/ n}$
+    genau dann invertierbar, wenn $\ggT\qty\big(k, n) = 1$ gilt''}) und
+  (b) ist $\qty[1026]$ in $\mathbb{Z}_{/ 1055}$ invertierbar.
+
+  Das multiplikative Inverse von $1026$ in $\mathbb{Z}_{/ 1055}$ ist $291$.
 \end{enumerate}
 \end{document}
